tests/rosetta/out/Smalltalk/cartesian-product-of-two-or-more-lists-3.out
/tmp/cartesian-product-of-two-or-more-lists-3.st:6: parse error, expected ']'
